--- a/EasySVGAnnotation/inst/doc/SVG_Test.Rmd
+++ b/EasySVGAnnotation/inst/doc/SVG_Test.Rmd
@@ -5,14 +5,10 @@ This is an R markdown document that tests the 'makeSVG.R' function for several k
 
 ```{r echo=FALSE, message=FALSE, results='asis'}
 library("Kmisc")
+library("EasySVGAnnotation")
 attachHTML()
-dropbox_folder <- "~/Dropbox"
 set.seed(123)
-setwd( dropbox_folder )
-setwd( "./R/kHandy/EasySVGAnnotation/Test/" )
-
-source( "../EasySVGAnnotation.R")
-
+setwd( paste0( getwd(), "/inst/doc") )
 kDat <- data.frame(
   y = rt(100, 2),
   x = rnorm(100),
@@ -20,15 +16,6 @@ kDat <- data.frame(
   gp2 = as.factor( rep( letters[1:2], each=50 ) ),
   id=1:100
 )
-
-p("The data:")
-pre('kDat <- data.frame(
-  y = rt(100, 2),
-  x = rnorm(100),
-  gp1 = as.factor( rep(1:4, each=25) ),
-  gp2 = as.factor( rep( letters[1:2], each=50 ) ),
-  id=1:100
-)')
 
 p("A quick look at the head of the data...")
 makeHTMLTable( head( kDat ), use.col.names=TRUE )
