moved around test / docs, updated installation instructions

--- a/EasySVGAnnotation/test/SVG_Test.Rmd
+++ b/EasySVGAnnotation/test/SVG_Test.Rmd
@@ -3,10 +3,9 @@ Testing makeSVG
 
 This is an R markdown document that tests the 'makeSVG.R' function for several kinds of plots.
 
-```{r results='asis', tidy=FALSE}
+```{r results='asis', tidy=FALSE, echo=FALSE, message=FALSE}
 library("Kmisc")
 library("EasySVGAnnotation")
-attachHTML()
 set.seed(123)
 kDat <- data.frame(
   y = rt(100, 2),
@@ -16,20 +15,20 @@ kDat <- data.frame(
   id=1:100
 )
 
-p("A quick look at the head of the data...")
+html( p("A quick look at the head of the data...") )
 makeHTMLTable( head( kDat ), use.col.names=TRUE )
 
-p("A simple xy plot.")
+html( p("A simple xy plot.") )
 kPlot <- xyplot( y ~ x, kDat )
 makeSVG( kPlot, kDat, outFile="simple_xy_plot.svg" )
 Kmisc:::kSvg( "simple_xy_plot.svg", width=300, height=300 )
 
-p("An xy plot, with panels.")
+html( p("An xy plot, with panels.") )
 kPlot <- xyplot( y ~ x | gp1, kDat )
 makeSVG( kPlot, kDat, outFile="xy_plot_with_panels.svg" )
 Kmisc:::kSvg( "xy_plot_with_panels.svg", width=300, height=300 )
 
-p("An xy plot with panels + grouping.")
+html( p("An xy plot with panels + grouping.") )
 kPlot <- xyplot( y ~ x | gp1, kDat,
                  groups=gp2,
                  auto.key=TRUE
@@ -37,7 +36,7 @@ kPlot <- xyplot( y ~ x | gp1, kDat,
 makeSVG( kPlot, kDat, outFile="xy_plot_with_panels_and_groups.svg" )
 Kmisc:::kSvg( "xy_plot_with_panels_and_groups.svg", width=300, height=300 )
 
-p("An xy plot with panels + grouping, and custom colors for groups.")
+html( p("An xy plot with panels + grouping, and custom colors for groups.") )
 kPlot <- xyplot( y ~ x | gp1, kDat,
                  groups=gp2,
                  col=c("orange","turquoise"),
@@ -49,7 +48,7 @@ kPlot <- xyplot( y ~ x | gp1, kDat,
 makeSVG( kPlot, kDat, outFile="xy_plot_with_panels_and_groups_color.svg" )
 Kmisc:::kSvg( "xy_plot_with_panels_and_groups_color.svg", width=300, height=300 )
 
-p("An xy plot with panels + grouping, and custom colors for groups, and smoothers.")
+html( p("An xy plot with panels + grouping, and custom colors for groups, and smoothers.") )
 kPlot <- xyplot( y ~ x | gp1, kDat,
                  groups=gp2,
                  col=c("orange","turquoise"),
@@ -65,7 +64,7 @@ kPlot <- xyplot( y ~ x | gp1, kDat,
 makeSVG( kPlot, kDat, outFile="xy_plot_with_panels_and_groups_color_loess.svg" )
 Kmisc:::kSvg( "xy_plot_with_panels_and_groups_color_loess.svg", width=300, height=300 )
 
-p("A dotplot. Note that in order to get the fill on highlight, it is necessary to specify a 'hollow' pch.")
+html( p("A dotplot. Note that in order to get the fill on highlight, it is necessary to specify a 'hollow' pch.") )
 
 kPlot <- dotplot( y ~ gp1, kDat, par.settings=list(
   dot.symbol=list( pch=1 )
@@ -73,7 +72,7 @@ kPlot <- dotplot( y ~ gp1, kDat, par.settings=list(
 makeSVG( kPlot, kDat, outFile="dotplot.svg" )
 Kmisc:::kSvg( "dotplot.svg", width=300, height=300 )
 
-p("dotplot with extra panels")
+html( p("dotplot with extra panels") )
 kPlot <- dotplot( y ~ gp1 | gp2, kDat,
                   par.settings=list(
                     dot.symbol=list( pch=1 )
@@ -82,7 +81,7 @@ kPlot <- dotplot( y ~ gp1 | gp2, kDat,
 makeSVG( kPlot, kDat, outFile="dotplot_with_panels.svg" )
 Kmisc:::kSvg( "dotplot_with_panels.svg", width=300, height=300 )
 
-p("boxplot with panels")
+html( p("boxplot with panels") )
 kPlot <- SVG.bwplot( y ~ gp1 | gp2, kDat )
 makeSVG( kPlot, kDat, outFile="bwplot_with_panels.svg" )
 Kmisc:::kSvg( "bwplot_with_panels.svg", width=300, height=300 )
